# shadow_medical_record-

./: Cargo.toml  README.md  TESTING.md  index.html
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: package.json  pnpm-lock.yaml
apps/desktop/src/: App.tsx  api.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/demo-data/corpus/: 2023-04-24_出院记录_脑梗死.txt  2023-05-20_门诊病历_脑梗后随访.txt  2023-06-15_检验报告_血脂血糖.txt  2023-09-08_处方_神经内科.txt  2023-11-02_头颅MRI_脑梗随访.txt  2024-01-15_检验报告_血脂.txt  2024-03-22_腹部超声_脂肪肝.txt  2025-05-06_检验报告_血脂血糖.txt  2025-07-30_病理报告_胃活检.txt  2025-11-05_检验报告_血常规肾功能.txt  2026-02-14_检验报告_肾功血脂.txt  2026-04-12_门诊病历_高血压随访.txt  2026-04-30_血压记录_家庭监测.txt  2026-06-20_处方_内分泌科.txt
apps/desktop/src-tauri/demo-data/imaging/: 2023-11-02_头颅MRI_华山.dcm
apps/desktop/src-tauri/src/: commands.rs  dto.rs  export.rs  lib.rs  share.rs
apps/desktop/src/components/: AboutView.tsx  DicomViewer.tsx  DocumentView.tsx  ImageViewer.tsx  ImportView.tsx  ReportContent.tsx  SearchView.tsx  SettingsView.tsx  Sidebar.tsx  Timeline.tsx
docs/: 011_Storage_Sync.md  013_Mobile_App.md  014_Imaging_Overhaul.md
docs/superpowers/plans/: 2026-07-06-medme-v0.1-frontend-c1.md
examples/demo-dataset/: gen_ct_series.py
examples/demo-dataset/imaging/头颅CT序列/: slice_01.dcm  slice_02.dcm  slice_03.dcm  slice_04.dcm  slice_05.dcm  slice_06.dcm  slice_07.dcm  slice_08.dcm  slice_09.dcm  slice_10.dcm  slice_11.dcm  slice_12.dcm
examples/demo-dataset/scenarios/: 2025-02-18_胸部CT_肺结节.txt  2025-03-12_头颅CT_协和.dcm
web/hosted-viewer/: index.html
(+5 files in other folders)
